--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AndroidFundamentals"
         tools:targetApi="31">
         <activity
+            android:name=".SeventhActivity"
+            android:exported="false" />
+        <activity
             android:name=".SixthActivity"
             android:exported="false" />
         <activity
@@ -36,6 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".services.MyIntentService"/>
     </application>
 
 </manifest>
